--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Test App</string>
-    <string name="button">OK</string>
+    <string name="button">Comparison</string>
     <string name="def">Null</string>
     <string name="match_rate">Match rate</string>
     <string name="text_format">Undefind</string>
